# github_actions

./: README.md  pyproject.toml
.github/workflows/: ci.yml  deploy_manual.yml
tests/: __init__.py  test_soma.py
