[tool.poetry]
name = "github-actions"
version = "0.1.0"
description = ""
authors = ["oseiasdfarias <oseias.dfarias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
black = "^23.12.1"
isort = "^5.13.2"
pytest = "^7.4.4"
gunicorn = "^21.2.0"
pydocstyle = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
